<resources>
    <string name="app_name">Practica5</string>
    <string name="welcome_text">Welcome to the Portales!</string>
    <string name="welcome_description">Taqueria los portales is a quick, casual restaurant.</string>
    <string name="button_start">get started!</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of the Cheezery</string>
    <string name="sign_in">Sign in</string>
    <string name="our_menu">Our menu</string>
    <string name="Drinks">Drinks</string>
    <string name="Sopas">Sopas</string>
    <string name="antojitos">Antojitos</string>
    <string name="Tortas">Tortas</string>
    <string name="combinations">Combinations</string>
    <string name="especialidades">Especialidades</string>
</resources>
